--- a/helloworld-blockchain-application/src/main/resources/static/index.html
+++ b/helloworld-blockchain-application/src/main/resources/static/index.html
@@ -33,7 +33,7 @@
                         <li><a href="./pay.html">支付</a></li>
                         <li><a href="./wallet.html">钱包</a></li>
                         <li><a href="./node-management.html">节点管理</a></li>
-                        <li><a href="./more-management.html">节点控制台</a></li>
+                        <li><a href="./node-console.html">节点控制台</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
@@ -66,10 +66,10 @@
 
         <script>
             $(async function(){
-                const data = await $ajax({
+                const response = await $ajax({
                     url : baseUrl() + "/Api/BlockchainBrowserApplication/QueryTop10Blocks"
                 })
-                $(data.result.blocks).each((index, item) => {
+                $(response.data.blocks).each((index, item) => {
                     $('tbody').append(`
                     <tr>
                         <td><a target="_blank" href="./block-by-height.html?height=${item.height}">${item.height}</a></td>
