--- a/helloworld-blockchain-application/src/main/resources/static/pay.html
+++ b/helloworld-blockchain-application/src/main/resources/static/pay.html
@@ -28,7 +28,7 @@
                         <li class="active"><a href="./pay.html">支付</a></li>
                         <li><a href="./wallet.html">钱包</a></li>
                         <li><a href="./node-management.html">节点管理</a></li>
-                        <li><a href="./more-management.html">节点控制台</a></li>
+                        <li><a href="./node-console.html">节点控制台</a></li>
                     </ul>
                 </div>
             </div>
@@ -38,39 +38,16 @@
             <div class="panel panel-default">
                 <div class="panel-heading">支付</div>
             </div>
-            <div id="payerList">
-                <div class="panel panel-default" name="payer">
-                    <!-- Default panel contents -->
-                    <div class="panel-heading">收款方</div>
-                    <!-- List group -->
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <div class="input-group">
-                                <span class="input-group-addon">请输入收款方地址</span>
-                                <input type="text" class="form-control" name="address">
-                            </div>
-                        </li>
-                        <li class="list-group-item">
-                            <div class="input-group">
-                                <span class="input-group-addon">请输入付款的金额</span>
-                                <input type="number" class="form-control" name="money">
-                            </div>
-                        </li>
-                        <li class="list-group-item">
-                            <button class="btn btn-primary add"><i class="glyphicon glyphicon-plus"></i>&nbsp;增加收款方</button>
-                            <button class="btn btn-primary delete" onclick="javascript:this.parentNode.parentNode.parentNode.remove()"><i class="glyphicon glyphicon-minus"></i>&nbsp;删除该收款方</button>
-                        </li>
-                    </ul>
-                </div>
+            <div id="payees">
             </div>
             <div style="text-align: center;">
-                <button type="button" class="btn btn-primary" onclick="onConfirm()">确认转账</button>
+                <button type="button" class="btn btn-primary" onclick="confirmPayment()">确认支付</button>
             </div>
         </div>
         <script>
-            $('body').delegate('.add', 'click', function(){
-                $('#payerList').append(`
-                    <div class="panel panel-default" name="payer">
+            function addPayee(){
+                $('#payees').append(`
+                    <div class="panel panel-default" name="payee">
                         <!-- Default panel contents -->
                         <div class="panel-heading">收款方</div>
                         <!-- List group -->
@@ -94,59 +71,61 @@
                         </ul>
                     </div>
                 `)
-            });
-            async function onConfirm(){
-                let recipientList = [];
-                Array.from($('[name="payer"]')).forEach(item => {
-                    recipientList.push({address:$(item).find('[name="address"]:first').val().trim(),value:$(item).find('[name="money"]:first').val()})
-                });
-                const data = await $ajax({
-                    url : baseUrl() + "/Api/WalletApplication/BuildTransaction",
-                    data: JSON.stringify({recipientList})
-                })
-                if(data.serviceCode == 'SUCCESS'){
-                    const obj = {}
-                    obj.transaction = data.result.transaction;
-                    const data2 = await $ajax({
-                        url : baseUrl() + "/Api/WalletApplication/SubmitTransactionToBlockchainNetwork",
-                        data: JSON.stringify(obj),
-                    });
-                    alert(data2.message)
+            }
 
-                    let payerList = data.result.transactionInputs.map((item,index) => {
+            $('body').delegate('.add', 'click', function(){
+                addPayee();
+            });
+
+            async function confirmPayment(){
+                let payees = [];
+                Array.from($('[name="payee"]')).forEach(item => {
+                    payees.push({address:$(item).find('[name="address"]:first').val().trim(),value:$(item).find('[name="money"]:first').val()})
+                });
+                var request1 = JSON.stringify({payees})
+                const response = await $ajax({
+                    url : baseUrl() + "/Api/WalletApplication/AutoBuildTransaction",
+                    data: request1
+                })
+                if(response.status == 'success'){
+                    const request2 = {}
+                    request2.transaction = response.data.transaction;
+                    const response2 = await $ajax({
+                        url : baseUrl() + "/Api/WalletApplication/SubmitTransactionToBlockchainNetwork",
+                        data: JSON.stringify(request2),
+                    });
+                    alert(response2.message);
+
+                    let payersHtml = response.data.payers.map((item,index) => {
                         return `
                         <div class="panel-heading">交易付款方${index+1}</div>
                           <ul class="list-group">
                             <li class="list-group-item">付款地址 : <a title="地址，点击查看地址详情。" target="_blank" href="./address.html?address=${item.address}">${item.address}</a></li>
                             <li class="list-group-item">付款金额 : ${item.value}</li>
-                            <li class="list-group-item">付款来源交易哈希 : <a target="_blank" href="./transaction.html?transactionHash=${item.transactionHash}">${item.transactionHash}</a></li>
-                            <li class="list-group-item">付款来源交易输出索引号 : <a title="交易输出，点击查看交易输出详情。" target="_blank" href="./transactionoutput.html?transactionHash=${item.transactionHash}&transactionOutputIndex=${item.transactionOutputIndex}">${item.transactionOutputIndex}</a></li>
                           </ul>
                         `
-                    })
+                    }).join('');
 
-                    let payeeList = data.result.transactionOutputs.map((item,index) => {
+                    let exclusionChangePayeesHtml = response.data.exclusionChangePayees.map((item,index) => {
                         return `
                           <div class="panel-heading">交易收款方${index+1}</div>
                           <ul class="list-group">
                             <li class="list-group-item">收款地址 : <a title="地址，点击查看地址详情。" target="_blank" href="./address.html?address=${item.address}">${item.address}</a></li>
                             <li class="list-group-item">收款金额 : ${item.value}</li>
-                            <li class="list-group-item">输出脚本 : ${item.outputScript.join(' ')}</li>
                           </ul>
                         `
-                    });
+                    }).join('');
 
-                    let payerChangeHtml = "";
-                    if(data.result.payerChangeTransactionOutput != null){
-                        payerChangeHtml = `
+                    let changePayeeHtml = "";
+                    if(response.data.changePayee != null){
+                        changePayeeHtml = `
                             <div class="panel panel-default">
                               <!-- Default panel contents -->
                               <div class="panel-heading">找零</div>
                               <!-- List group -->
                               <ul class="list-group">
-                                <li class="list-group-item">找零地址 : <a title="地址，点击查看地址详情。" target="_blank" href="./address.html?address=${data.result.payerChangeTransactionOutput.address}">${data.result.payerChangeTransactionOutput.address}</a></li>
-                                <li class="list-group-item">找零金额 : ${data.result.payerChangeTransactionOutput.value}</li>
-                                <li class="list-group-item">输出脚本 : ${data.result.payerChangeTransactionOutput.outputScript.join(' ')}</li>
+                                <li class="list-group-item">找零地址 : <a title="地址，点击查看地址详情。" target="_blank" href="./address.html?address=${response.data.changePayee.address}">${response.data.changePayee.address}</a></li>
+                                <li class="list-group-item">找零金额 : ${response.data.changePayee.value}</li>
                               </ul>
                             </div>
                         `;
@@ -156,24 +135,24 @@
                         <div class="page-header" style="margin-top:0;">
                           <h1>支付详情</h1>
                         </div>
-                        <!-- 付款人 -->
+                        <!-- 付款方-->
                         <div class="panel panel-default">
-                        ${payerList.join('')}
+                        ${payersHtml}
                         </div>
-                        <!-- 收款人 -->
+                        <!-- 收款方(不包含找零收款方)-->
                         <div class="panel panel-default">
-                        ${payeeList.join('')}
+                        ${exclusionChangePayeesHtml}
                         </div>
-                        <!-- 找零 -->
-                        ${payerChangeHtml}
+                        <!-- 找零收款方 -->
+                        ${changePayeeHtml}
                         <!-- 其它 -->
                         <div class="panel panel-default">
                           <!-- Default panel contents -->
                           <div class="panel-heading">更多交易信息</div>
                           <!-- List group -->
                           <ul class="list-group">
-                            <li class="list-group-item">交易手续费 : ${data.result.fee}</li>
-                            <li class="list-group-item">交易哈希 : <a target="_blank" href="./transaction.html?transactionHash=${data.result.transactionHash}">${data.result.transactionHash}</a></li>
+                            <li class="list-group-item">交易手续费 : ${response.data.fee}</li>
+                            <li class="list-group-item">交易哈希 : <a target="_blank" href="./transaction.html?transactionHash=${response.data.transactionHash}">${response.data.transactionHash}</a></li>
                           </ul>
                         </div>
                         <div class="panel panel-default">
@@ -183,7 +162,7 @@
                           <ul class="list-group">
                             <li class="list-group-item">方式一：付款方进入<a target="_blank" href="./wallet.html">钱包</a>查看钱的总额是否变化</li>
                             <li class="list-group-item">方式二：通知收款方进入<a target="_blank" href="./wallet.html">钱包</a>查看钱的总额是否变化</li>
-                            <li class="list-group-item">方式三：查看<a target="_blank" href="./unconfirm-transaction.html?transactionHash=${data.result.transactionHash}">交易</a>是否被区块链确认。若发现交易暂未被确认，可打开链接后，复制保存链接，稍后再查看。</li>
+                            <li class="list-group-item">方式三：查看<a target="_blank" href="./unconfirm-transaction.html?transactionHash=${response.data.transactionHash}">交易</a>是否被区块链确认。若发现交易暂未被确认，可打开链接后，复制保存链接，稍后再查看。</li>
                           </ul>
                         </div>
                         <button type="button" class="btn btn-success" style="margin-left:45%" onclick="layer.close(layer.index);">关闭</button>
@@ -200,9 +179,11 @@
                       content: str
                     });
                 }else {
-                    alert(data.message);
+                    alert(response.message);
                 }
             }
+
+            addPayee();
         </script>
     </body>
 </html>
