--- a/helloworld-blockchain-application/src/main/resources/static/transactionoutput.html
+++ b/helloworld-blockchain-application/src/main/resources/static/transactionoutput.html
@@ -27,7 +27,7 @@
                         <li><a href="./pay.html">支付</a></li>
                         <li><a href="./wallet.html">钱包</a></li>
                         <li><a href="./node-management.html">节点管理</a></li>
-                        <li><a href="./more-management.html">节点控制台</a></li>
+                        <li><a href="./node-console.html">节点控制台</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
@@ -48,15 +48,15 @@
         <script>
             $(async function(){
                 let urlParameters = parseUrlParameters(location)
-                const data = await $ajax({
+                const response = await $ajax({
                     url : baseUrl() + "/Api/BlockchainBrowserApplication/QueryTransactionOutputByTransactionOutputId",
                     data: `{
                         "transactionHash":"${urlParameters.get("transactionHash")}",
                         "transactionOutputIndex":${urlParameters.get("transactionOutputIndex")}
                     }`
                 });
-                console.log(data);
-                var transactionOutputDetail = data.result.transactionOutputDetail;
+                console.log(response);
+                var transactionOutputDetail = response.data.transactionOutputDetail;
                 $('.panel-heading').text(`交易输出[交易哈希${urlParameters.get("transactionHash")}    交易输出索引${urlParameters.get("transactionOutputIndex")}]`);
 
                 $('#summary').html(`
